--- a/views/chart.html
+++ b/views/chart.html
@@ -98,13 +98,10 @@
         .chart {
             height: 38vh;
         }
-        .srcn {
-            max-height: calc(100vh - 6.25rem);
-        }
         @media screen and (max-width: 1124px) {
             .video-card {
                 width: 100%; /* 비디오 카드 너비 설정 */
-                max-height: calc(200vh - 200px - 3.75rem); /* 화면 높이에서 아래 카드 영역 높이(150px * 2 + 20px)를 뺀 만큼의 최대 높이 설정 */
+                max-height: calc(200vh - 200px - 4rem); /* 화면 높이에서 아래 카드 영역 높이(150px * 2 + 20px)를 뺀 만큼의 최대 높이 설정 */
                 margin-bottom: 20px;
             }
             .video-item {
@@ -141,16 +138,13 @@
                 width: 100%; /* 전체 너비를 가득 채우도록 설정 */
                 box-sizing: border-box; /* 패딩을 포함하여 크기 계산 */
             }
-            .srcn {
-                max-height: calc(100vh - 3.25rem);
-            }
         }
         @media screen and (max-width: 767px) {
             body {
                 padding: 0;
             }
             .video-card {
-                max-height: calc(200vh - 200px - 5.25rem);
+                max-height: calc(200vh - 200px - 4rem);
             }
             .video-item {
                 height: auto;
@@ -215,7 +209,7 @@
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">대시보드</span>
                     </a>
-                    <a href="/chart" class="nav_link">
+                    <a href="#" class="nav_link">
                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
                         <span class="nav_name">차트</span>
                     </a>
@@ -237,8 +231,7 @@
         </nav>
     </div>
 
-    <div class="height-100 bg-light srcn" style="padding: 1rem;">
-            <h4 style="padding: 0 0.5rem 0 0.5rem;" id="dashboard_name"></h4>
+    <div class="height-100 bg-light" style="padding: 1rem; max-height: calc(100vh - 5rem);">
         <div class="main-container">
             <!-- 비디오 카드 -->
             <div class="video-card" style="margin-right: 1rem;">
@@ -400,11 +393,7 @@
     <script>
         const ctx = $("#data-chart");
         const ctx2 = $("#data-chart2");
-        const loc = decodeURI(location.search.substr(location.search.indexOf("?") + 1)).split(",");
-
         $(document).ready(function() {
-            
-            $("#dashboard_name").text(loc[0])
             new Chart(ctx, {
                 type: 'line',
                 data: {
